Ignore .idea; simplify obtaining trig coefficients

--- a/JointSolver.csproj
+++ b/JointSolver.csproj
@@ -2,4 +2,10 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+    <Content Include="designs\TestDesign.tscn" />
+    <Content Include="LICENSE" />
+    <Content Include="README.md" />
+  </ItemGroup>
 </Project>
